WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
64438
[CSSRegions]content:-webkit-from-flow not applied correctly
https://bugs.webkit.org/show_bug.cgi?id=64438
Summary
[CSSRegions]content:-webkit-from-flow not applied correctly
Mihnea Ovidenie
Reported
2011-07-13 01:39:57 PDT
Correct the patch for
bug 63133
. Also, correct the associated layout test.
Attachments
Patch
(6.81 KB, patch)
2011-07-13 01:56 PDT
,
Mihnea Ovidenie
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mihnea Ovidenie
Comment 1
2011-07-13 01:56:47 PDT
Created
attachment 100644
[details]
Patch
WebKit Review Bot
Comment 2
2011-07-13 10:30:18 PDT
Comment on
attachment 100644
[details]
Patch Rejecting
attachment 100644
[details]
from review queue.
tony@chromium.org
does not have reviewer permissions according to
http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/committers.py
. - If you do not have reviewer rights please read
http://webkit.org/coding/contributing.html
for instructions on how to use bugzilla flags. - If you have reviewer rights please correct the error in Tools/Scripts/webkitpy/common/config/committers.py by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your reviewer rights.
WebKit Review Bot
Comment 3
2011-07-13 10:30:57 PDT
Comment on
attachment 100644
[details]
Patch Rejecting
attachment 100644
[details]
from commit-queue.
tony@chromium.org
does not have committer permissions according to
http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/committers.py
. - If you do not have committer rights please read
http://webkit.org/coding/contributing.html
for instructions on how to use bugzilla flags. - If you have committer rights please correct the error in Tools/Scripts/webkitpy/common/config/committers.py by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your committer rights.
Tony Chang
Comment 4
2011-07-13 10:55:18 PDT
Let's try that again.
WebKit Review Bot
Comment 5
2011-07-13 11:49:29 PDT
Comment on
attachment 100644
[details]
Patch Clearing flags on attachment: 100644 Committed
r90935
: <
http://trac.webkit.org/changeset/90935
>
WebKit Review Bot
Comment 6
2011-07-13 11:49:34 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug