[CSSRegions]content:-webkit-from-flow not applied correctly https://bugs.webkit.org/show_bug.cgi?id=64438

Patch by Mihnea Ovidenie <mihnea@adobe.com> on 2011-07-13
Reviewed by Tony Chang.

Source/WebCore:

Forgot to modify getStringValue(), i was modifying only getStringValue(ExceptionCode&).

Test: fast/regions/content-webkit-from-flow-parsing.html (existing).

* css/CSSPrimitiveValue.cpp:
(WebCore::CSSPrimitiveValue::getStringValue):

LayoutTests:

Correct the layout test for content:-webkit-from-flow parsing. Testing getComputedStyle values for content property
was not done properly, as "flow-name" was passed instead of "-webkit-from-flow:'flow-name'".

* fast/regions/content-webkit-from-flow-parsing-expected.txt:
* fast/regions/script-tests/content-webkit-from-flow-parsing.js:

Canonical link: https://commits.webkit.org/80192@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90935 268f45cc-cd09-0410-ab3c-d52691b4dbfc